# MLops-project

./: .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  tasks.py  train.dockerfile
.dvc/: config
.github/workflows/: cml_data.yaml  linting.yaml  pre-commit.yaml  tests.yaml
data/corruptmnist_v1/processed/: test_targets.pt  train_targets.pt
dockerfiles/: api.dockerfile
docs/: mkdocs.yaml
project/dtu_mlops_project/: README.md  evaluate.dockerfile  pyproject.toml  requirement.txt  tasks.py
project/dtu_mlops_project/.devcontainer/: devcontainer.json
project/dtu_mlops_project/dockerfiles/: train.dockerfile
project/dtu_mlops_project/docs/source/: index.md
project/dtu_mlops_project/src/dtu_mlops/: data.py  model.py  train.py
project/dtu_mlops_project/src/dtu_mlops/config/data/: data.yaml
project/dtu_mlops_project/src/dtu_mlops/config/model/: model.yaml
project/dtu_mlops_project/src/dtu_mlops/config/train/: train.yaml
project/dtu_mlops_project/tests/: test_data.py  test_model.py
project/src/: data.py  model.py
src/dtu_mlops/: data.py  dataset.py  evaluate.py  my_logger.py  train.py  visualize.py
src/dtu_mlops/config/: config.yaml
src/dtu_mlops/outputs/2026-06-11/18-37-07/.hydra/: hydra.yaml
src/dtu_mlops/outputs/2026-06-11/18-44-39/wandb/latest-run/: run-eaivrih7.wandb
src/dtu_mlops/outputs/2026-06-11/18-52-49/.hydra/: hydra.yaml
src/dtu_mlops/outputs/2026-06-16/18-19-53/.hydra/: hydra.yaml
src/dtu_mlops/outputs/2026-06-16/18-19-53/wandb/: latest-run
tests/: test_data.py  test_model.py
(+28 files in other folders)
