[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dtu_mlops"
version = "0.0.1"
description = "the project is for the course mlops at dtu"
authors = [
  { name = "jason", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.6.9",
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "dvc-gs>=3.1.0",
    "dvc-ssh>=4.3.0",
    "fastapi==0.115.6",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "matplotlib",
    "torch==2.6.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.27.2",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff>=0.4.7",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = []

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src/dtu_mlops"

[tool.coverage.run]
omit = ["tests/*"]
